[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cape2.gd" type="Script" id=1]
[ext_resource path="res://cape_part.png" type="Texture" id=2]

[node name="Base" type="Sprite"]
show_behind_parent = true
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="Follow1" type="Sprite" parent="Node"]
modulate = Color( 0.00784314, 0.0862745, 0.941176, 1 )
show_behind_parent = true
z_index = -1
texture = ExtResource( 2 )

[node name="Follow2" type="Sprite" parent="Node"]
modulate = Color( 0.988235, 0, 0, 1 )
show_behind_parent = true
scale = Vector2( 1.2, 1.2 )
z_index = -1
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
